edited js and created new directories

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 		  <h1>A collection of exotic fish with care tips and Martin's personal favorite fish harvest locations.</h1>
 		</header>
 	</div>
-	<div class="fishTank">
-		<section class="fishList">
-			
-		</section>
-	</div>	
+	<div class="fishListContainer">
+
+	</div>
 
     <script type="module" src="./scripts/main.js"></script>
+
 </body>
 </html>
