--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="header">
 		<header>
-		  <div><img src="images/logo.png" alt="Martins Aquarium"></div>
+		  <div><img src="" alt="Martins Aquarium"></div>
 		  <h1>A collection of exotic fish with care tips and Martin's personal favorite fish harvest locations.</h1>
 		</header>
 	</div>
