Completed MVP of Martin's aquarium

--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
 		  <h1>A collection of exotic fish with care tips and Martin's personal favorite fish harvest locations.</h1>
 		</header>
 	</div>
-	<div class="fishListContainer">
+	<main>
+		<aside class="tipListContainer">
 
-	</div>
+		</aside>
+	
+		<div class="fishListContainer">
+
+		</div>
+
+		<h2> “Many men go fishing all of their lives without knowing that it is not fish they are after” <br> Henry David Thoreau.</h2>
+		
+		<h1> Harvest Location of Featured Fish Type:</h1>
+		<div class="locationCollectionContainer">
+
+		</div>
+	
+	</main>
+
 
     <script type="module" src="./scripts/main.js"></script>
 
